--- a/Pages/Contactus.html
+++ b/Pages/Contactus.html
@@ -10,97 +10,252 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+
 </head>
 <!-- nav bar -->
-<nav>
-  <img src="/images/navlogo.png" class="logo" />
-  <div class="navigation">
-    <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/Pages/ourstory.html">About Us</a></li>
-      <li><a href="/Pages/courses.html">Courses</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-  <button id="join">Join Now</button>
-</nav>
+
+
 <body>
-    <style>
-      /* import font implementation */
-      @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
-  
-      /* Declear color theme */
-      :root {
-        --primary-color: rgba(255, 102, 0, 0.959);
+  <nav>
+    <img src="/images/navlogo.png" class="logo" />
+    <div class="navigation">
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Pages/ourstory.html">About Us</a></li>
+        <li><a href="/Pages/courses.html">Courses</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <button id="join">Join Now</button>
+  </nav>
+  <section style=" padding-top: 63px; width: 100%;height: 100vh;display: flex;flex-direction: column;justify-content: center">
+    <div class="contact-container">
+      <div class="contact-form">
+        <div class="design-element-left">
+
+        </div>
+        <form>
+          <label style="font-size:43px; font-weight:bold;margin-bottom:30px;">Love to hear from you,<br>Get in
+            touch👋</label><br>
+          <label for="name">Your name</label><br>
+          <input type="text" id="name" name="name" placeholder="Edward Snowden" required><br>
+
+          <label for="email">Your email</label><br>
+          <input type="email" id="email" name="email" placeholder="itanexample@gmail.com" required><br>
+
+          <label for="message">Message</label><br>
+          <textarea id="message" name="message" rows="5" cols="30" placeholder="Let tell us know your issues about"
+            required></textarea><br>
+
+          <input type="submit" value="Submit   &#8599" class="btn-sumbit">
+        </form>
+        <div class="design-element-right">
+
+
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+  <style>
+    /* import font implementation */
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+
+    /* Declear color theme */
+    :root {
+      --primary-color: rgba(255, 102, 0, 0.959);
+    }
+
+    body {
+      font-family: 'Source Sans Pro';
+      -ms-overflow-style: none;
+      /* Hide scrollbar for Internet Explorer and Edge */
+      scrollbar-width: none;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
+      /* Hide scrollbar for Chrome, Safari and Opera */
+    }
+
+    /* navigation menu */
+    nav {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      position: fixed;
+      width: 100%;
+      height: 63px;
+      background-color: white;
+      padding: 0.5vw 2vw;
+      align-items: center;
+      box-shadow: 2px 2px 10px rgba(189, 189, 189, 0.5);
+    }
+
+    nav img {
+      width: auto;
+      height: 50px;
+      cursor: pointer;
+    }
+
+    nav .navigation {
+      margin: 0px;
+      padding: 0;
+    }
+
+    nav .navigation ul {
+      display: flex;
+      margin: 0;
+      justify-content: flex-end;
+      align-items: center;
+    }
+
+    nav .navigation ul li {
+      list-style: none;
+      margin-left: 30px;
+    }
+
+    nav .navigation ul li a {
+      text-decoration: none;
+      color: black;
+      font-size: 1rem;
+      transition: 0.3s ease;
+      font-family: 'Source Sans Pro';
+      font-weight: 600;
+    }
+
+    nav .navigation ul li a:hover {
+      color: var(--primary-color)
+    }
+
+    h2 {
+      font-family: 'Source Sans Pro';
+    }
+
+    /* For Join Button */
+    #join {
+      background-color: var(--primary-color);
+      border-style: none;
+      padding: 5px 15px;
+      border-radius: 7px;
+      color: white;
+      font-size: 16px;
+    }
+
+    /* Here start from first section */
+   
+    .contact-container h1 {
+      text-align: left;
+      font-size: 35px;
+      font-weight: 600;
+    }
+
+    .contact-container .contact-form {
+      display: flex;
+      justify-content: center;
+      align-items: center
+    }
+
+    .contact-container .contact-form label {
+      font-size: 16px;
+      font-weight: 600;
+
+    }
+
+    .contact-container .contact-form input {
+      width: 500px;
+      background-color: #FAFAFA;
+      border: none;
+      height: 40px;
+      padding-left: 10px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+      border-radius: 0px;
+
+    }
+    .contact-container .contact-form textarea {
+      width: 500px;
+      background-color: #FAFAFA;
+      border: none;
+      padding: 10px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+    .contact-container .contact-form .btn-sumbit {
+      background-color: black;
+      color: white;
+      padding: 0px;
+      cursor: pointer;
+      position: relative;
+      transition: all 0.3s ease;
+    }
+    .contact-container .contact-form .btn-sumbit:hover {
+      background-color: var(--primary-color);
+      transform: translateY(-3px);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+
+    }
+
+    .contact-container .contact-form input::placeholder {
+      color: #ACACAC;
+    }
+
+    .contact-container .contact-form textarea::placeholder {
+      color: #ACACAC;
+    }
+
+    .contact-container .contact-form input:focus {
+      outline-color: black;
+    }
+
+    .contact-container .contact-form textarea:focus {
+      outline-color: black;
+    }
+
+    /* For design elemets */
+    .contact-container .contact-form .design-element-left {
+      width: 3px;
+      height: 100px;
+      border-radius: 20px;
+      background-color: black;
+      margin-right: 70px;
+      background-image: linear-gradient(to top, black 50%, #FAFAFA 50%);
+      animation: myanimation 10s linear infinite;
+    }
+
+    .contact-container .contact-form .design-element-right {
+      width: 3px;
+      height: 100px;
+      border-radius: 20px;
+      background-color: black;
+      margin-left: 70px;
+      background-image: linear-gradient(to top, #FAFAFA 50%, black 50%);
+      animation: my2ndanimation 10s linear infinite;
+    }
+
+    /* for animation of design element */
+    @keyframes myanimation {
+      0% {
+        background-image: linear-gradient(to top, #FAFAFA 50%, black 50%);
       }
-  
-      body {
-        font-family: 'Source Sans Pro';
+
+      100% {
+        background-image: linear-gradient(to top, black 50%, #FAFAFA 50%);
       }
-  
-      /* navigation menu */
-      nav {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        position: fixed;
-        width: 100%;
-        height: 63px;
-        background-color: white;
-        padding: 0.5vw 2vw;
-        align-items: center;
-        box-shadow: 2px 2px 10px rgba(189, 189, 189, 0.5);
+    }
+
+    @keyframes my2ndanimation {
+      0% {
+        background-image: linear-gradient(to top, black 50%, #FAFAFA 50%);
       }
-  
-      nav img {
-        width: auto;
-        height: 50px;
-        cursor: pointer;
+
+      100% {
+        background-image: linear-gradient(to top, #FAFAFA 50%, black 50%);
       }
-  
-      nav .navigation {
-        margin: 0px;
-        padding: 0;
-      }
-  
-      nav .navigation ul {
-        display: flex;
-        margin: 0;
-        justify-content: flex-end;
-        align-items: center;
-      }
-  
-      nav .navigation ul li {
-        list-style: none;
-        margin-left: 30px;
-      }
-  
-      nav .navigation ul li a {
-        text-decoration: none;
-        color: black;
-        font-size: 1rem;
-        transition: 0.3s ease;
-        font-family: 'Source Sans Pro';
-        font-weight: 600;
-      }
-  
-      nav .navigation ul li a:hover {
-        color: var(--primary-color)
-      }
-  
-      h2 {
-        font-family: 'Source Sans Pro';
-      }
-  
-      #join {
-        background-color: var(--primary-color);
-        border-style: none;
-        padding: 5px 15px;
-        border-radius: 7px;
-        color: white;
-        font-size: 16px;
-      }
-</style>
+    }
+  </style>
 </body>
-</html>  
+
+</html>
