--- a/Pages/ourstory.html
+++ b/Pages/ourstory.html
@@ -13,19 +13,20 @@
     
 </head>
 <!-- nav bar -->
-<nav>
-  <img src="/images/navlogo.png" class="logo" />
-  <div class="navigation">
-    <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="/Pages/courses.html">Courses</a></li>
-      <li><a href="/Pages/Contactus.html">Contact</a></li>
-    </ul>
-  </div>
-  <button id="join">Join Now</button>
-</nav>
+
 <body>
+  <nav>
+    <img src="/images/navlogo.png" class="logo" />
+    <div class="navigation">
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="/Pages/courses.html">Courses</a></li>
+        <li><a href="/Pages/Contactus.html">Contact</a></li>
+      </ul>
+    </div>
+    <button id="join">Join Now</button>
+  </nav>
     <section id="review">
         <div class="container">
             <h1>We are changing the whole Game.</h1>
@@ -48,12 +49,21 @@
          /* import font implementation */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
-        :root {
+     /* Declear color theme */
+    :root {
       --primary-color: rgba(255, 102, 0, 0.959);
     }
 
     body {
       font-family: 'Source Sans Pro';
+      -ms-overflow-style: none;
+      /* Hide scrollbar for Internet Explorer and Edge */
+      scrollbar-width: none;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
+      /* Hide scrollbar for Chrome, Safari and Opera */
     }
 
     /* navigation menu */
