--- a/index.html
+++ b/index.html
@@ -10,53 +10,55 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+
 </head>
-<!-- nav bar -->
-<nav>
-  <img src="images/navlogo.png" class="logo" />
-  <div class="navigation">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="/Pages/ourstory.html">About Us</a></li>
-      <li><a href="/Pages/courses.html">Courses</a></li>
-      <li><a href="/Pages/Contactus.html">Contact</a></li>
-    </ul>
-  </div>
-  <button id="join">Join Now</button>
-</nav>
-<!-- Section home start -->
-<section id="Home">
-  <h2>Enhance Your Future with TechEduca</h2>
-  <p>hdefjhegjhebgfjghegfkjehgfjhebfjbgejfbgejhfgejfgjyjfgjhfgejhfgejhfgejhgfjhegfjhegfjhefjhefjehfjehffejhfjhefjhefjhej
-  </p>
-  <div class="all-btn">
-    <a class="left-btn" href="#">Learn More</a>
-    <a class="right-btn" href="#">Visit Courses</a>
-  </div>
-</section>
-<!-- Section Features start -->
-<section id="Features">
-  <h1>Awesome Features</h1>
-  <p>ejrhgekjnhreknhrkenhrkejhrkjhekrehkrjhekrhej</p>
-  <div class="fea-base">
-    <div class="fea-box">
-      <i class="fa-regular fa-school"></i>
-      <h3>Scolar ship facility</h3>
-    </div>
-  </div>
-
-</section>
-
-<section id="AboutUs">
-
-</section>
-
-<section id="Contact">
-
-</section>
 
 <body>
+  <!-- nav bar -->
+  <nav>
+    <img src="images/navlogo.png" class="logo" />
+    <div class="navigation">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="/Pages/ourstory.html">About Us</a></li>
+        <li><a href="/Pages/courses.html">Courses</a></li>
+        <li><a href="/Pages/Contactus.html">Contact</a></li>
+      </ul>
+    </div>
+    <button id="join">Join Now</button>
+  </nav>
+  <!-- Section home start -->
+  <section id="Home">
+    <h2>Enhance Your Future with TechEduca</h2>
+    <p>
+      hdefjhegjhebgfjghegfkjehgfjhebfjbgejfbgejhfgejfgjyjfgjhfgejhfgejhfgejhgfjhegfjhegfjhefjhefjehfjehffejhfjhefjhefjhej
+    </p>
+    <div class="all-btn">
+      <a class="left-btn" href="#">Learn More</a>
+      <a class="right-btn" href="#">Visit Courses</a>
+    </div>
+  </section>
+  <!-- Section Features start -->
+  <section id="Features">
+    <h1>Awesome Features</h1>
+    <p>ejrhgekjnhreknhrkenhrkejhrkjhekrehkrjhekrhej</p>
+    <div class="fea-base">
+      <div class="fea-box">
+        <i class="fa-regular fa-school"></i>
+        <h3>Scolar ship facility</h3>
+      </div>
+    </div>
+
+  </section>
+
+  <section id="AboutUs">
+
+  </section>
+
+  <section id="Contact">
+
+  </section>
+
   <style>
     /* import font implementation */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
@@ -68,6 +70,14 @@
 
     body {
       font-family: 'Source Sans Pro';
+      -ms-overflow-style: none;
+      /* Hide scrollbar for Internet Explorer and Edge */
+      scrollbar-width: none;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
+      /* Hide scrollbar for Chrome, Safari and Opera */
     }
 
     /* navigation menu */
@@ -210,9 +220,10 @@
       background-color: blue;
 
     }
+
     /*features*/
 
-    #Features{
+    #Features {
 
       width: 100%;
       height: 100vh;
