--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <script src="https://kit.fontawesome.com/65930b502c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
+
 
 <body>
   <!-- nav bar -->
@@ -58,9 +60,19 @@
   <section id="Contact">
 
   </section>
-
+  <footer>
+    <div class="social-media">
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#"><i class="bi bi-twitter"></i></a>
+    </div>
+    <div class="copyright">
+     <h4>2023 powred by Om Pratik Patra</h4>
+    </div>
+  </footer>
   <style>
     /* import font implementation */
+    @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
     /* Declear color theme */
@@ -237,6 +249,51 @@
       background-size: cover;
       justify-content: center;
 
+    }
+
+    /* Footer design */
+    footer {
+      width: 100%;
+      height: 50px;
+      background-color: black;
+      bottom: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 20px;
+      justify-content: center;
+
+    }
+
+    footer .social-media, footer .copyright {
+      width: 50%
+    }
+    footer .social-media a{
+      text-decoration: none;
+      color:white;
+    }
+    footer .social-media .bi {
+      cursor: pointer;
+      padding:7px;
+      font-size: 20px;
+      border-color: white;
+      border-radius: 7px;
+      border-width: 1px;
+      background-color:none !important;
+    }
+    footer .social-media .bi:hover {
+     color:var(--primary-color)
+    }
+
+
+    footer .copyright {
+      text-align: right;
+    }
+    footer .copyright h4{
+      font-size:16px;
+      color: white;
+      margin: 0;
+      font-weight: 600;
     }
   </style>
 
