--- a/index.html
+++ b/index.html
@@ -61,13 +61,40 @@
 
   </section>
   <footer>
-    <div class="social-media">
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
+    <div class="footer-center">
+      <div class="footer-div">
+        <h3>About Us</h3>
+        <p style="width: 233px ;color:white;">Heaven fruitful doesn't over lesser days appear creeping seasons so behold
+          bearing days open</p>
+      </div>
+      <div class="footer-div">
+        <h3>Contact Info</h3>
+        <p style="width: 254px ;color:white;"><b>Address:</b>Karangamal Near jaggarnath
+          Temple<br><b>Phone:</b>+917894721848<br><b>Gmail:</b>info@gmail.com</p>
+      </div>
+      <div class="footer-div">
+        <h3>Important Link</h3>
+        <ul>
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>About Us</li></a>
+          <a href="#"><li>Courses</li></a>
+          <a href="#"><li>Coontact</li></a>
+        </ul>
+      </div>
+      <div class="footer-div">
+        <h3>Newsletter</h3>
+        <input type="email" id="email" name="email" placeholder="itanexample@gmail.com" required><br>
+        <input type="submit" value="Submit   &#8599" class="btn-sumbit">
+      </div>
     </div>
-    <div class="copyright">
-     <h4>2023 powred by Om Pratik Patra</h4>
+    <div class="copyright"></div>
+    <div class="copyright-left">
+      <h6>Copyright ©2022 All rights reserved | This template is made by Mamun Abdullah</h6>
+      <div>
+        <i class="bi bi-facebook"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-twitter"></i>
+      </div>
     </div>
   </footer>
   <style>
@@ -78,6 +105,68 @@
     /* Declear color theme */
     :root {
       --primary-color: rgba(255, 102, 0, 0.959);
+    }
+
+    /* Footer Design */
+    .bi {
+      font-size: 20px;
+      color: white;
+      padding: 6px;
+    }
+
+    .copyright {
+      width: 100%;
+      height: 0.5px;
+      background-color: white;
+
+    }
+
+    .copyright-left {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 13px;
+    }
+
+    .copyright-left h6 {
+      color: white;
+      font-weight: 300;
+    }
+
+    footer {
+      width: 100%;
+
+      background-color: black;
+      padding: 30px;
+    }
+
+    .footer-center {
+      display: flex;
+      justify-content: space-between;
+
+    }
+
+    .footer-center .footer-div {
+      text-align: left;
+    }
+
+    .footer-center .footer-div h3 {
+      font-size: 24px;
+      font-weight: 600;
+      color: white;
+    }
+
+    .footer-center .footer-div ul {
+      padding-inline-start: 0px;
+    }
+
+    .footer-center .footer-div ul li {
+      list-style: none;
+      line-height: 28px;
+    }
+
+    .footer-center .footer-div ul a {
+      text-decoration: none;
+      color: white;
     }
 
     body {
@@ -252,49 +341,6 @@
     }
 
     /* Footer design */
-    footer {
-      width: 100%;
-      height: 50px;
-      background-color: black;
-      bottom: 0;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 20px;
-      justify-content: center;
-
-    }
-
-    footer .social-media, footer .copyright {
-      width: 50%
-    }
-    footer .social-media a{
-      text-decoration: none;
-      color:white;
-    }
-    footer .social-media .bi {
-      cursor: pointer;
-      padding:7px;
-      font-size: 20px;
-      border-color: white;
-      border-radius: 7px;
-      border-width: 1px;
-      background-color:none !important;
-    }
-    footer .social-media .bi:hover {
-     color:var(--primary-color)
-    }
-
-
-    footer .copyright {
-      text-align: right;
-    }
-    footer .copyright h4{
-      font-size:16px;
-      color: white;
-      margin: 0;
-      font-weight: 600;
-    }
   </style>
 
 </body>
