--- a/index.html
+++ b/index.html
@@ -42,24 +42,9 @@
   </section>
   <!-- Section Features start -->
   <section id="Features">
-    <h1>Awesome Features</h1>
-    <p>ejrhgekjnhreknhrkenhrkejhrkjhekrehkrjhekrhej</p>
-    <div class="fea-base">
-      <div class="fea-box">
-        <i class="fa-regular fa-school"></i>
-        <h3>Scolar ship facility</h3>
-      </div>
-    </div>
 
   </section>
 
-  <section id="AboutUs">
-
-  </section>
-
-  <section id="Contact">
-
-  </section>
   <footer>
     <div class="footer-center">
       <div class="footer-div">
@@ -75,31 +60,40 @@
       <div class="footer-div">
         <h3>Important Link</h3>
         <ul>
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About Us</li></a>
-          <a href="#"><li>Courses</li></a>
-          <a href="#"><li>Coontact</li></a>
+          <a href="#">
+            <li>Home</li>
+          </a>
+          <a href="/Pages/ourstory.html">
+            <li>About Us</li>
+          </a>
+          <a href="/Pages/courses.html">
+            <li>Courses</li>
+          </a>
+          <a href="/Pages/Contactus.html">
+            <li>Contact</li>
+          </a>
         </ul>
       </div>
-      <div class="footer-div">
+      <div class="footer-div button">
         <h3>Newsletter</h3>
         <input type="email" id="email" name="email" placeholder="itanexample@gmail.com" required><br>
-        <input type="submit" value="Submit   &#8599" class="btn-sumbit">
+        <input type="submit" value="Submit">
       </div>
     </div>
     <div class="copyright"></div>
     <div class="copyright-left">
-      <h6>Copyright ©2022 All rights reserved | This template is made by Mamun Abdullah</h6>
+      <h6>Copyright ©2023 All rights reserved | This template is made by Om Pratik Patra</h6>
       <div>
-        <i class="bi bi-facebook"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-twitter"></i>
+        <i class="bi bi-facebook" onclick="window.open('https://www.facebook.com', '_blank')"></i>
+        <i class="bi bi-instagram" onclick="window.open('https://www.instagram.com', '_blank')"></i>
+        <i class="bi bi-twitter" onclick="window.open('https://www.twitter.com', '_blank')"></i>
       </div>
     </div>
   </footer>
   <style>
-    /* import font implementation */
+    /* import font awsome implementation */
     @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+    /* import font implementation */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
     /* Declear color theme */
@@ -107,67 +101,6 @@
       --primary-color: rgba(255, 102, 0, 0.959);
     }
 
-    /* Footer Design */
-    .bi {
-      font-size: 20px;
-      color: white;
-      padding: 6px;
-    }
-
-    .copyright {
-      width: 100%;
-      height: 0.5px;
-      background-color: white;
-
-    }
-
-    .copyright-left {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 13px;
-    }
-
-    .copyright-left h6 {
-      color: white;
-      font-weight: 300;
-    }
-
-    footer {
-      width: 100%;
-
-      background-color: black;
-      padding: 30px;
-    }
-
-    .footer-center {
-      display: flex;
-      justify-content: space-between;
-
-    }
-
-    .footer-center .footer-div {
-      text-align: left;
-    }
-
-    .footer-center .footer-div h3 {
-      font-size: 24px;
-      font-weight: 600;
-      color: white;
-    }
-
-    .footer-center .footer-div ul {
-      padding-inline-start: 0px;
-    }
-
-    .footer-center .footer-div ul li {
-      list-style: none;
-      line-height: 28px;
-    }
-
-    .footer-center .footer-div ul a {
-      text-decoration: none;
-      color: white;
-    }
 
     body {
       font-family: 'Source Sans Pro';
@@ -322,25 +255,110 @@
 
     }
 
-    /*features*/
 
-    #Features {
+    /* Footer design */
+    .bi {
+      font-size: 20px;
+      color: white;
+      padding: 6px;
+    }
+    .bi:hover {
+      cursor: pointer;
+    }
 
+    .copyright {
       width: 100%;
-      height: 100vh;
-      padding-top: 63px;
-      background-color: linear-gradient(rgba);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #ffa15f;
-      background-position: center;
-      background-size: cover;
-      justify-content: center;
+      height: 0.5px;
+      background-color: white;
 
     }
 
-    /* Footer design */
+    .copyright-left {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 13px;
+    }
+
+    .copyright-left h6 {
+      color: white;
+      font-weight: 300;
+    }
+
+    footer {
+      width: 100%;
+      background-color: black;
+      padding: 30px;
+      padding-bottom: 16px;
+      position:absolute;
+    }
+
+    .footer-center {
+      display: flex;
+      justify-content: space-between;
+
+    }
+
+    [type=submit] {
+      width: auto;
+      background: white;
+      border-style: none;
+      margin-top: 5px;
+      transition: 0.2s;
+      border-radius: 5px;
+    font-size: 16px;
+    }
+    [type=email] {
+      width: 211px;
+      background: white;
+      border-style: none;
+      margin-top: 5px;
+      transition: 0.2s;
+      font-size: 16px;
+      outline: 0;
+    }
+
+
+    [type=submit]:hover {
+
+      background: var(--primary-color);
+      color: white;
+
+    }
+
+    .footer-center .footer-div {
+      text-align: left;
+    }
+
+    .footer-center .footer-div h3 {
+      font-size: 24px;
+      font-weight: 600;
+      color: white;
+    }
+
+    .footer-center .footer-div ul {
+      padding-inline-start: 0px;
+    }
+
+    .footer-center .footer-div ul li {
+      list-style: none;
+      line-height: 28px;
+      margin-left: 0;
+      transition: margin-left 0.5s ease;
+    }
+
+    .footer-center .footer-div ul li:hover {
+      margin-left: 5px;
+    }
+
+    .footer-center .footer-div ul a {
+      text-decoration: none;
+      color: white;
+    }
+
+    .footer-center .footer-div ul a :hover {
+      text-decoration: none;
+      color: var(--primary-color);
+    }
   </style>
 
 </body>
