--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -98,6 +98,7 @@
   
       /* navigation menu */
       nav {
+        z-index: 999;
         display: flex;
         justify-content: space-between;
         flex-direction: row;
