--- a/Pages/Contactus.html
+++ b/Pages/Contactus.html
@@ -129,6 +129,7 @@
 
     /* navigation menu */
     nav {
+      z-index: 999;
       display: flex;
       justify-content: space-between;
       flex-direction: row;
