--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
     /* navigation menu */
     nav {
+      z-index: 999;
       display: flex;
       justify-content: space-between;
       flex-direction: row;
