--- a/Pages/Contactus.html
+++ b/Pages/Contactus.html
@@ -62,18 +62,15 @@
     <div class="footer-center">
       <div class="footer-div">
         <h3>About Us</h3>
-        <p style="width: 233px ;color:white;">Heaven fruitful doesn't over lesser days appear creeping seasons so behold
-          bearing days open</p>
-      </div>
-      <div class="footer-div">
-        <h3>Contact Info</h3>
-        <p style="width: 254px ;color:white;"><b>Address:</b>Karangamal Near jaggarnath
-          Temple<br><b>Phone:</b>+917894721848<br><b>Gmail:</b>info@gmail.com</p>
+        <p style="width: 233px; color: white">
+          Heaven fruitful doesn't over lesser days appear creeping seasons so
+          behold bearing days open
+        </p>
       </div>
       <div class="footer-div">
         <h3>Important Link</h3>
         <ul>
-          <a href="#">
+          <a href="/index.html">
             <li>Home</li>
           </a>
           <a href="/Pages/ourstory.html">
@@ -87,19 +84,35 @@
           </a>
         </ul>
       </div>
-      <div class="footer-div button">
-        <h3>Newsletter</h3>
-        <input type="email" id="email" name="email" placeholder="itanexample@gmail.com" required><br>
-        <input type="submit" value="Submit">
+      <div class="footer-div">
+        <h3>Contact Info</h3>
+        <p style="width: 254px; color: white">
+          <b>Address:</b>Karangamal Near jaggarnath Temple<br /><b>Phone:</b
+          >+917894721848<br /><b>Gmail:</b>info@gmail.com
+        </p>
       </div>
+      
+      
     </div>
     <div class="copyright"></div>
     <div class="copyright-left">
-      <h6>Copyright ©2023 All rights reserved | This template is made by Om Pratik Patra</h6>
+      <h6>
+        Copyright ©2023 All rights reserved | This template is made by Om
+        Pratik Patra
+      </h6>
       <div>
-        <i class="bi bi-facebook" onclick="window.open('https://www.facebook.com', '_blank')"></i>
-        <i class="bi bi-instagram" onclick="window.open('https://www.instagram.com', '_blank')"></i>
-        <i class="bi bi-twitter" onclick="window.open('https://www.twitter.com', '_blank')"></i>
+        <i
+          class="bi bi-facebook"
+          onclick="window.open('https://www.facebook.com', '_blank')"
+        ></i>
+        <i
+          class="bi bi-instagram"
+          onclick="window.open('https://www.instagram.com', '_blank')"
+        ></i>
+        <i
+          class="bi bi-twitter"
+          onclick="window.open('https://www.twitter.com', '_blank')"
+        ></i>
       </div>
     </div>
   </footer>
